2014-05-16  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/aarch64-protos.h (scale_addr_mode_cost): New.
	(cpu_addrcost_table): Use it.
	* config/aarch64/aarch64.c (generic_addrcost_table): Initialize it.
	(aarch64_address_cost): Rewrite using aarch64_classify_address,
	move it.

2014-04-22  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* config/aarch64/aarch64.c (TARGET_FLAGS_REGNUM): Define.
2015-06-26  Release Manager

	* GCC 4.9.3 released.

2015-06-26  Jakub Jelinek  <jakub@redhat.com>

	* doc/cpp.texi: Update displayed copyright years.
	* doc/cppinternals.texi: Likewise.
	* doc/gcc.texi: Likewise.
	* doc/gccint.texi: Likewise.
	* doc/gcov.texi: Likewise.
	* doc/install.texi: Likewise.
	* doc/invoke.texi: Likewise.
	* gcc.c: Likewise.
	* gcov-dump.c: Likewise.
	* gcov.c: Likewise.

2015-06-23  Matthias Klose  <doko@ubuntu.com>

	PR target/66483
	Backport from mainline r212178.
	2014-06-30  Joseph Myers  <joseph@codesourcery.com>

        * var-tracking.c (add_stores): Return instead of asserting if old
        and new values for conditional store are the same.

2015-06-23  Ludovic Courtès  <ludo@gnu.org>

	PR 65711
	* config/arm/linux-elf.h (LINUX_TARGET_LINK_SPEC): Move
	'-dynamic-linker' within %{!shared: ...}.

2015-06-22  Vladimir Makarov  <vmakarov@redhat.com>

	PR bootstrap/63740
	* lra-lives.c (process_bb_lives): Check insn copying the same
	reload pseudo and don't create a copy for it.

2015-06-19  Christophe Lyon  <christophe.lyon@linaro.org>

	Backport from mainline r215707.
	2014-09-30  David Sherwood  <david.sherwood@arm.com>

	* ira-int.h (ira_allocno): Add "wmode" field.
	* ira-build.c (create_insn_allocnos): Add new "parent" function
	parameter.
	* ira-conflicts.c (ira_build_conflicts): Add conflicts for registers
	that cannot be accessed in wmode.

2015-06-18  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/66233
	* fold-const.c (fold_unary_loc): Don't handle vector types.
	Simplify.